tests/inputs/invalid/types/bad_routines/bad_return_2.crbc
routine main (): boolean is 
    var x : integer is 0;
    
    if true then 
        var x : boolean is 1; //shadowing
    end

    return 0;
end